force-app/main/default/objects/Forrester_CONTACT__x/Forrester_CONTACT__x.object-meta.xml
<CustomObject>
    <description>Forrester_CONTACT</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_CONTACT</externalName>
    <label>Forrester_CONTACT</label>
    <pluralLabel>Forrester_CONTACT</pluralLabel>
</CustomObject>