force-app/main/default/objects/Forrester_CONTACT__x/fields/ADD_DATE__c.field-meta.xml
<CustomField>
    <fullName>ADD_DATE__c</fullName>
    <description>ADD_DATE</description>
    <externalDeveloperName>ADD_DATE</externalDeveloperName>
    <label>ADD_DATE</label>
    <type>DateTime</type>
</CustomField>