force-app/main/default/objects/Forrester_CONTACT__x/fields/ALTERNATE_IPIA_AGMT_DATE__c.field-meta.xml
<CustomField>
    <fullName>ALTERNATE_IPIA_AGMT_DATE__c</fullName>
    <description>ALTERNATE_IPIA_AGMT_DATE</description>
    <externalDeveloperName>ALTERNATE_IPIA_AGMT_DATE</externalDeveloperName>
    <label>ALTERNATE_IPIA_AGMT_DATE</label>
    <type>DateTime</type>
</CustomField>