force-app/main/default/objects/Forrester_CONTACT__x/fields/ALTERNATE_IPIA_AGMT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ALTERNATE_IPIA_AGMT_FLAG__c</fullName>
    <description>ALTERNATE_IPIA_AGMT_FLAG</description>
    <externalDeveloperName>ALTERNATE_IPIA_AGMT_FLAG</externalDeveloperName>
    <label>ALTERNATE_IPIA_AGMT_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>