force-app/main/default/objects/Forrester_CONTACT__x/fields/ALTERNATE_IPIA_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ALTERNATE_IPIA_TYPE__c</fullName>
    <description>ALTERNATE_IPIA_TYPE</description>
    <externalDeveloperName>ALTERNATE_IPIA_TYPE</externalDeveloperName>
    <label>ALTERNATE_IPIA_TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>