force-app/main/default/objects/Forrester_CONTACT__x/fields/BIRTHDAY__c.field-meta.xml
<CustomField>
    <fullName>BIRTHDAY__c</fullName>
    <description>BIRTHDAY</description>
    <externalDeveloperName>BIRTHDAY</externalDeveloperName>
    <label>BIRTHDAY</label>
    <type>DateTime</type>
</CustomField>