force-app/main/default/objects/Forrester_CONTACT__x/fields/BLOCK_PAYMENTS_FLAG__c.field-meta.xml
<CustomField>
    <fullName>BLOCK_PAYMENTS_FLAG__c</fullName>
    <description>BLOCK_PAYMENTS_FLAG</description>
    <externalDeveloperName>BLOCK_PAYMENTS_FLAG</externalDeveloperName>
    <label>BLOCK_PAYMENTS_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>