force-app/main/default/objects/Forrester_CONTACT__x/fields/COMPANY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_NAME__c</fullName>
    <description>COMPANY_NAME</description>
    <externalDeveloperName>COMPANY_NAME</externalDeveloperName>
    <label>COMPANY_NAME</label>
    <length>90</length>
    <type>Text</type>
</CustomField>