force-app/main/default/objects/Forrester_CONTACT__x/fields/CURR_CONTACT_RECID__c.field-meta.xml
<CustomField>
    <fullName>CURR_CONTACT_RECID__c</fullName>
    <description>CURR_CONTACT_RECID</description>
    <externalDeveloperName>CURR_CONTACT_RECID</externalDeveloperName>
    <label>CURR_CONTACT_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>