force-app/main/default/objects/Forrester_CONTACT__x/fields/DATE_TO_FACULTY_YEAR__c.field-meta.xml
<CustomField>
    <fullName>DATE_TO_FACULTY_YEAR__c</fullName>
    <description>DATE_TO_FACULTY_YEAR</description>
    <externalDeveloperName>DATE_TO_FACULTY_YEAR</externalDeveloperName>
    <label>DATE_TO_FACULTY_YEAR</label>
    <length>4</length>
    <type>Text</type>
</CustomField>