force-app/main/default/objects/Forrester_CONTACT__x/fields/DEPARTMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>DEPARTMENT_RECID__c</fullName>
    <description>DEPARTMENT_RECID</description>
    <externalDeveloperName>DEPARTMENT_RECID</externalDeveloperName>
    <label>DEPARTMENT_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>