force-app/main/default/objects/Forrester_CONTACT__x/fields/FORRESTER_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>FORRESTER_USER_ID__c</fullName>
    <description>FORRESTER_USER_ID</description>
    <externalDeveloperName>FORRESTER_USER_ID</externalDeveloperName>
    <label>FORRESTER_USER_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>