force-app/main/default/objects/Forrester_CONTACT__x/fields/GOVT_EMPLOYEE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>GOVT_EMPLOYEE_STATUS__c</fullName>
    <description>GOVT_EMPLOYEE_STATUS</description>
    <externalDeveloperName>GOVT_EMPLOYEE_STATUS</externalDeveloperName>
    <label>GOVT_EMPLOYEE_STATUS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>