force-app/main/default/objects/Forrester_CONTACT__x/fields/HAS_SSN_FLAG__c.field-meta.xml
<CustomField>
    <fullName>HAS_SSN_FLAG__c</fullName>
    <description>HAS_SSN_FLAG</description>
    <externalDeveloperName>HAS_SSN_FLAG</externalDeveloperName>
    <label>HAS_SSN_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>