force-app/main/default/objects/Forrester_CONTACT__x/fields/IPIA_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>IPIA_COMMENT__c</fullName>
    <description>IPIA_COMMENT</description>
    <externalDeveloperName>IPIA_COMMENT</externalDeveloperName>
    <label>IPIA_COMMENT</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>