force-app/main/default/objects/Forrester_CONTACT__x/fields/IPIA_SIGNED_DATE_MOD_DATE__c.field-meta.xml
<CustomField>
    <fullName>IPIA_SIGNED_DATE_MOD_DATE__c</fullName>
    <description>IPIA_SIGNED_DATE_MOD_DATE</description>
    <externalDeveloperName>IPIA_SIGNED_DATE_MOD_DATE</externalDeveloperName>
    <label>IPIA_SIGNED_DATE_MOD_DATE</label>
    <type>DateTime</type>
</CustomField>