force-app/main/default/objects/Forrester_CONTACT__x/fields/IPIA_SIGNED_DATE_MOD_USER__c.field-meta.xml
<CustomField>
    <fullName>IPIA_SIGNED_DATE_MOD_USER__c</fullName>
    <description>IPIA_SIGNED_DATE_MOD_USER</description>
    <externalDeveloperName>IPIA_SIGNED_DATE_MOD_USER</externalDeveloperName>
    <label>IPIA_SIGNED_DATE_MOD_USER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>