force-app/main/default/objects/Forrester_CONTACT__x/fields/IPIA_SIGNED_FLAG__c.field-meta.xml
<CustomField>
    <fullName>IPIA_SIGNED_FLAG__c</fullName>
    <description>IPIA_SIGNED_FLAG</description>
    <externalDeveloperName>IPIA_SIGNED_FLAG</externalDeveloperName>
    <label>IPIA_SIGNED_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>