force-app/main/default/objects/Forrester_CONTACT__x/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <description>LAST_NAME</description>
    <externalDeveloperName>LAST_NAME</externalDeveloperName>
    <label>LAST_NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>