force-app/main/default/objects/Forrester_CONTACT__x/fields/MIT_EMPL_FLAG__c.field-meta.xml
<CustomField>
    <fullName>MIT_EMPL_FLAG__c</fullName>
    <description>MIT_EMPL_FLAG</description>
    <externalDeveloperName>MIT_EMPL_FLAG</externalDeveloperName>
    <label>MIT_EMPL_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>