force-app/main/default/objects/Forrester_CONTACT__x/fields/MIT_ID__c.field-meta.xml
<CustomField>
    <fullName>MIT_ID__c</fullName>
    <description>MIT_ID</description>
    <externalDeveloperName>MIT_ID</externalDeveloperName>
    <label>MIT_ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>