force-app/main/default/objects/Forrester_CONTACT__x/fields/MOD_DATE__c.field-meta.xml
<CustomField>
    <fullName>MOD_DATE__c</fullName>
    <description>MOD_DATE</description>
    <externalDeveloperName>MOD_DATE</externalDeveloperName>
    <label>MOD_DATE</label>
    <type>DateTime</type>
</CustomField>