force-app/main/default/objects/Forrester_CONTACT__x/fields/MOD_USER__c.field-meta.xml
<CustomField>
    <fullName>MOD_USER__c</fullName>
    <description>MOD_USER</description>
    <externalDeveloperName>MOD_USER</externalDeveloperName>
    <label>MOD_USER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>