force-app/main/default/objects/Forrester_CONTACT__x/fields/NAME_PREFIX__c.field-meta.xml
<CustomField>
    <fullName>NAME_PREFIX__c</fullName>
    <description>NAME_PREFIX</description>
    <externalDeveloperName>NAME_PREFIX</externalDeveloperName>
    <label>NAME_PREFIX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>