force-app/main/default/objects/Forrester_CONTACT__x/fields/NAME_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>NAME_SUFFIX__c</fullName>
    <description>NAME_SUFFIX</description>
    <externalDeveloperName>NAME_SUFFIX</externalDeveloperName>
    <label>NAME_SUFFIX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>