force-app/main/default/objects/Forrester_CONTACT__x/fields/OWNER__c.field-meta.xml
<CustomField>
    <fullName>OWNER__c</fullName>
    <description>OWNER</description>
    <externalDeveloperName>OWNER</externalDeveloperName>
    <label>OWNER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>