force-app/main/default/objects/Forrester_CONTACT__x/fields/SALESFORCE_ID__c.field-meta.xml
<CustomField>
    <fullName>SALESFORCE_ID__c</fullName>
    <externalDeveloperName>SALESFORCE_ID</externalDeveloperName>
    <label>SALESFORCE_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>