force-app/main/default/objects/Forrester_CONTACT__x/fields/SAP_VENDOR_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_VENDOR_ID__c</fullName>
    <description>SAP_VENDOR_ID</description>
    <externalDeveloperName>SAP_VENDOR_ID</externalDeveloperName>
    <label>SAP_VENDOR_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>