force-app/main/default/objects/Forrester_CONTACT__x/fields/SUCC_CONTACT_DATE__c.field-meta.xml
<CustomField>
    <fullName>SUCC_CONTACT_DATE__c</fullName>
    <description>SUCC_CONTACT_DATE</description>
    <externalDeveloperName>SUCC_CONTACT_DATE</externalDeveloperName>
    <label>SUCC_CONTACT_DATE</label>
    <type>DateTime</type>
</CustomField>