force-app/main/default/objects/Forrester_CONTACT__x/fields/SUCC_CONTACT_RECID__c.field-meta.xml
<CustomField>
    <fullName>SUCC_CONTACT_RECID__c</fullName>
    <description>SUCC_CONTACT_RECID</description>
    <externalDeveloperName>SUCC_CONTACT_RECID</externalDeveloperName>
    <label>SUCC_CONTACT_RECID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>