force-app/main/default/objects/Forrester_CONTACT__x/fields/TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID__c</fullName>
    <description>TAX_ID</description>
    <externalDeveloperName>TAX_ID</externalDeveloperName>
    <label>TAX_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>