force-app/main/default/objects/Forrester_CONTACT__x/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <description>TITLE</description>
    <externalDeveloperName>TITLE</externalDeveloperName>
    <label>TITLE</label>
    <length>65</length>
    <type>Text</type>
</CustomField>