force-app/main/default/objects/Forrester_CONTACT__x/fields/WITHHOLDING_FLAG__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_FLAG__c</fullName>
    <description>WITHHOLDING_FLAG</description>
    <externalDeveloperName>WITHHOLDING_FLAG</externalDeveloperName>
    <label>WITHHOLDING_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>