force-app/main/default/objects/Forrester_CONTACT__x/fields/WITHHOLDING_PCT__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_PCT__c</fullName>
    <description>WITHHOLDING_PCT</description>
    <externalDeveloperName>WITHHOLDING_PCT</externalDeveloperName>
    <label>WITHHOLDING_PCT</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>